[project]
name = "lance-perf-test"
version = "0.1.0"
description = ""
authors = [
    {name = "ddupg",email = "ddupgs@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pylance (==0.29.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "lmdb (>=1.6.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false